# online-courses

algorithmic-toolbox/: pyproject.toml
algorithmic-toolbox/algorithmic_toolbox/algorithmic-warm-up/: fibonacci-number.py  greatest-common-divisor.py  huge-fibonacci.py  last-digit-of-fibonacci.py  last-digit-of-partial-sum.py  last-digit-of-sum-of-squares.py  last-digit-of-sum.py  lowest-common-multiple.py
algorithmic-toolbox/algorithmic_toolbox/greedy-algorithms/: car-fueling.py  collecting-signatures.py  max-advert-revenue.py  max-number-of-prizes.py  max-value-of-loot.py  maximum-salary.py  money-change.py
