[tool.poetry]
name = "algorithmic-toolbox"
version = "0.1.0"
description = ""
authors = ["RowMur <rowanomurray@gmail.com>"]
readme = "README.md"
packages = [{include = "algorithmic_toolbox"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
